# chatbot_oficina

./: .env.example  .gitignore  README.md  pyproject.toml  run.bat
app/: main.py
data/documentos/: FAQ.txt
src/chatbot_oficina/: __init__.py
src/chatbot_oficina/chat/: __init__.py  model.py
src/chatbot_oficina/database/: client.py  repository.py  schema.py
src/chatbot_oficina/guards/: __init__.py  injection_detector.py  topic_validator.py
src/chatbot_oficina/rag/: __init__.py  chain.py  loader.py  vectorstore.py
